test_suite5/ALAN/test_suite/alan-2022-examples/failing/001810_mutation.alan
source D begin call rem D() end
